[gd_scene load_steps=4 format=3 uid="uid://cbyxw7lomgyo8"]

[ext_resource type="Script" uid="uid://ditf048oadwat" path="res://script/enemy_projectile.gd" id="1_v4qwc"]
[ext_resource type="Texture2D" uid="uid://bnw8m66nnvml1" path="res://BULLETHELLASSET/Enemies/EnemyProjectiles/bandage.png" id="2_q7xdb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gnkev"]
size = Vector2(74, 27)

[node name="EnemyProjectile" type="Area2D"]
collision_layer = 32
collision_mask = 5
script = ExtResource("1_v4qwc")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("2_q7xdb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, -1.5)
shape = SubResource("RectangleShape2D_gnkev")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
